# tribal-life

./: Cargo.toml
src/: camera.rs  instance.rs  lib.rs  main.rs  shader.wgsl  tribal.rs  vertex.rs
src/tribal/: hex.rs
