[package]
name = "hex-cellular-life"
version = "0.1.0"
edition = "2021"

[features]
winit = ["winit/default", "winit/wayland-backend", "winit/wayland"]
optimize = ["log/release_max_level_warn"]
default = ["optimize", "winit"]

[dependencies]
cfg-if = "1"
winit = { version = "0.29.10", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0"

byteorder = "1"
getrandom = "0.2"
randomize = "3"
instant = "0.1.12"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }

[lib]
crate-type = ["cdylib", "rlib"]
